isRightAnswer - changed with stream